--- a/src/sections/Mapa.astro
+++ b/src/sections/Mapa.astro
@@ -44,7 +44,7 @@ import "../styles/global.css";
               >
                 <!-- Envelope Icon -->
                 <div class="mb-4">
-  <a href="tel:+56949221955">
+  <a href="tel:+56973814899">
     <button class="rounded-lg px-4 py-2 text-gray-900 bg-yellow-400 hover:bg-gray-900 duration-300 hover:text-yellow-400 flex items-center gap-2">
       <!-- Icono opcional -->
         <path
@@ -66,7 +66,7 @@ import "../styles/global.css";
                   </h4>
                   <a
                     href="mailto:info@example.com"
-                    class="text-gray-600 text-sm">+569 4922 1955</a
+                    class="text-gray-600 text-sm">+569 7381 4899</a
                   >
                 </div>
               </div>
@@ -94,19 +94,19 @@ import "../styles/global.css";
                         d="M255.5 48C299.345 48 339.897 56.5332 377.156 73.5996C414.415 90.666 443.871 113.873 465.522 143.22C487.174 172.566 498 204.577 498 239.252C498 273.926 487.174 305.982 465.522 335.42C443.871 364.857 414.46 388.109 377.291 405.175C340.122 422.241 299.525 430.775 255.5 430.775C241.607 430.775 227.262 429.781 212.467 427.795C148.233 472.402 114.042 494.977 109.892 495.518C107.907 496.241 106.012 496.15 104.208 495.248C103.486 494.706 102.945 493.983 102.584 493.08C102.223 492.177 102.043 491.365 102.043 490.642V489.559C103.126 482.515 111.335 453.169 126.672 401.518C91.8486 384.181 64.1974 361.2 43.7185 332.575C23.2395 303.951 13 272.843 13 239.252C13 204.577 23.8259 172.566 45.4777 143.22C67.1295 113.873 96.5849 90.666 133.844 73.5996C171.103 56.5332 211.655 48 255.5 48Z"
                       ></path></svg
                     >
-                    Wsp Chat
+                    Chat
                   </button>
                 </div>
                 <!-- Phone Content -->
                 <div class="contactinfo-content text-center">
                   <h4 class="text-xl text-gray-800 font-semibold mb-2">
-                    Pide un Movil
+                    WhatsApp
                   </h4>
-                  <a href="tel:+8125553344" class="text-gray-600 text-sm"
-                    >+569 4922 1955</a
+                  <a href="tel:+56973814899" class="text-gray-600 text-sm"
+                    >+569 7381 4899</a
                   ><br />
-                  <a href="tel:+8125553344" class="text-gray-600 text-sm"
-                    >+569 8861 7637</a
+                  <a href="tel:+56946690695" class="text-gray-600 text-sm"
+                    >+569 4669 0695</a
                   >
                 </div>
               </div>
@@ -119,7 +119,7 @@ import "../styles/global.css";
               >
                 <!-- Location Pin Icon -->
                 <div class="mb-4">
-  <a href="tel:+56988617637">
+  <a href="tel:+56946690695">
     <button class="rounded-lg px-4 py-2 text-gray-900 bg-yellow-400 hover:bg-gray-900 duration-300 hover:text-yellow-400 flex items-center gap-2">
       <!-- Icono opcional -->
         <path
@@ -139,7 +139,7 @@ import "../styles/global.css";
                     Celular 2
                   </h4>
                   <p class="text-gray-600 text-sm">
-                    +569 8861 7637
+                    +569 4669 0695
                   </p>
                 </div>
               </div>
