--- a/src/sections/Carrusel.astro
+++ b/src/sections/Carrusel.astro
@@ -1,7 +1,7 @@
 <div class="carousel w-full h-[400px] pt-8 pb-8 lg:h-[700px]"> <!-- Ajusta el alto como necesites -->
   <div id="item1" class="carousel-item w-full h-full">
     <img
-      src="../../public/img1.jpeg"
+      src="/public/img1.jpeg"
       class="w-full h-full object-cover" />
   </div>
   <div id="item2" class="carousel-item w-full h-full">
