Fix 2 wsp numbers

--- a/src/sections/Mapa.astro
+++ b/src/sections/Mapa.astro
@@ -80,8 +80,9 @@ import "../styles/global.css";
                 <!-- Phone Icon -->
                 <div class="mb-4">
                   <!-- Kakao -->
-                  <button
-                    class="btn bg-yellow-400 text-[#181600] border-[#f1d800] hover:bg-gray-800 hover:text-yellow-400"
+                  <a
+                  class="btn bg-yellow-400 text-[#181600] border-[#f1d800] hover:bg-gray-800 hover:text-yellow-400"
+                  href="https://wa.me/56946690695"
                   >
                     <svg
                       aria-label="Kakao logo"
@@ -95,7 +96,7 @@ import "../styles/global.css";
                       ></path></svg
                     >
                     Chat
-                  </button>
+                </a>
                 </div>
                 <!-- Phone Content -->
                 <div class="contactinfo-content text-center">
