--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -6,7 +6,7 @@ import "../styles/global.css"
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link rel="icon" type="image/png" href="/public/logo.png?v=3" />
+    <link rel="icon" type="image/png" href="/public/favicon.png" />
     <meta name="generator" content={Astro.generator} />
     <title> TXS SCL Oficial</title>
   </head>
