--- a/src/sections/Carrusel.astro
+++ b/src/sections/Carrusel.astro
@@ -1,37 +1,37 @@
 <div class="carousel w-full h-[400px] pt-8 pb-8 lg:h-[700px]"> <!-- Ajusta el alto como necesites -->
   <div id="item1" class="carousel-item w-full h-full">
     <img
-      src="/public/img1.jpeg"
+      src="/img1.jpeg"
       class="w-full h-full object-cover" />
   </div>
   <div id="item2" class="carousel-item w-full h-full">
     <img
-      src="../../public/img2.jpeg"
+      src="/img2.jpeg"
       class="w-full h-full object-cover" />
   </div>
   <div id="item3" class="carousel-item w-full h-full">
     <img
-      src="../../public/img3.jpeg"
+      src="/img3.jpeg"
       class="w-full h-full object-cover" />
   </div>
   <div id="item4" class="carousel-item w-full h-full">
     <img
-      src="../../public/img4.jpeg"
+      src="/img4.jpeg"
       class="w-full h-full object-cover" />
   </div>
   <div id="item5" class="carousel-item w-full h-full">
     <img
-      src="../../public/img5.jpeg"
+      src="/img5.jpeg"
       class="w-full h-full object-cover" />
   </div>
   <div id="item6" class="carousel-item w-full h-full">
     <img
-      src="../../public/img6.jpeg"
+      src="/img6.jpeg"
       class="w-full h-full object-cover" />
   </div>
   <div id="item7" class="carousel-item w-full h-full">
     <img
-      src="../../public/img7.jpeg"
+      src="/img7.jpeg"
       class="w-full h-full object-cover" />
   </div>
  
